--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
     "preview": "vite preview",
-    "start:frontend": "vite",
+    "start:frontend": "vite -- --port $PORT",
     "start:backend": "nodemon --watch server --exec \"source ../backend/.venv/bin/activate && cd ../backend && uvicorn main:app --host 0.0.0.0 --port 8089\"",
-    "dev": "concurrently \"npm run start:frontend\" \"npm run start:backend\""
+    "dev": "concurrently bun:start:frontend bun:start:backend"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
