--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-# VITE_API_BASE_URL=https://qwen-3-mental-health-chatbot-fastapi-subhadeepdouble-8rs5pd9z.leapcell.dev/api/v1
-VITE_API_BASE_URL=http://localhost:8089/api/v1
+VITE_API_BASE_URL=https://qwen-3-mental-health-chatbot-fastapi-subhadeepdouble-8rs5pd9z.leapcell.dev/api/v1
+# VITE_API_BASE_URL=http://localhost:8089/api/v1
