--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
     "preview": "vite preview",
-    "start:frontend": "vite -- --port $PORT",
+    "start:frontend": "vite",
     "start:backend": "nodemon --watch server --exec \"source ../backend/.venv/bin/activate && cd ../backend && uvicorn main:app --host 0.0.0.0 --port 8089\"",
     "dev": "concurrently bun:start:frontend bun:start:backend"
   },
