--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,21 +11,21 @@ jobs:
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v5
 
       - name: Set up Node.js
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v6
         with:
           node-version: "24"
 
       - name: Install dependencies
-        run: npm ci
+        run: npm install
 
       - name: Build the React app
         run: npm run build
 
       - name: Upload build artifacts
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: build-artifacts
-          path: build/
+          path: dist/
